--- a/public/locales/en/seccion05.json
+++ b/public/locales/en/seccion05.json
@@ -1,1 +1,9 @@
-{}
+{
+  "title": "What top-tier companies tell about our product?",
+  "description": "Join the growing number of businesses and companies that have experienced the transformative impact of our chatbot service.",
+  "titleImg": "Mbida Messi",
+  "descriptionImg": "Founder ERC Music Market Store",
+  "client": "Client Testimonial",
+  "testimony": "I was amazed by the level of assistance I received from the AI Chatbot provided by ROTAR AI. It quickly understood my questions and provided accurate and helpful responses.",
+  "seeMore": "See more testimoni"
+}
