--- a/public/locales/es/seccion05.json
+++ b/public/locales/es/seccion05.json
@@ -1,1 +1,9 @@
-{}
+{
+  "title": "¿Qué dicen las empresas sobre nuestro producto?",
+  "description": "Únete a la creciente comunidad de empresas que han experimentado el impacto transformador de nuestros chatbots.",
+  "titleImg": "Mbida Messi",
+  "descriptionImg": "Fundador de ERC Music Market Store",
+  "client": "Opinión Cliente",
+  "testimony": "Me impresionó el increíble nivel de asistencia y eficiencia del chatbot de IA de ROTAR AI. Entendió mis preguntas rápidamente y brindó respuestas precisas y útiles.",
+  "seeMore": "Ver más testimonios"
+}
