--- a/public/locales/en/nav.json
+++ b/public/locales/en/nav.json
@@ -4,5 +4,6 @@
   "resources": "Resources",
   "pricing": "Pricing",
   "login": "Login",
-  "book_demo": "Book a demo"
+  "book_demo": "Book a demo",
+  "soon": "+soon"
 }
