--- a/public/locales/es/nav.json
+++ b/public/locales/es/nav.json
@@ -4,5 +4,6 @@
   "resources": "Recursos",
   "pricing": "Precios",
   "login": "Acceso",
-  "book_demo": "Reserva una demo"
+  "book_demo": "Reserva una demo",
+  "soon": "+pronto"
 }
